animation to the home page

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ body{
   margin-bottom: 20px;
   color: #f67f1dbb;
   font-size: 2.5rem;
+  animation-name:slideIn;
+animation-duration:3s
   
 }
 .home-page{
