--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ margin-top: 30px;
 }
 .warning{
   color: red;
+  font-size: 1rem;
 }
 @keyframes slideIn {
 from {
@@ -320,9 +321,15 @@ color: white;
   /* align-content: center; */
   margin: auto;
   /* margin-top: 20px; */
-  height: 400px;
+  height: 450px;
   padding-top: 40px ;
   /* margin-bottom: 30px; */
+}
+.healthy{
+  margin-top: 20px;
+}
+.notHealthy{
+  margin-top: 20px;
 }
 .main{
   padding-top: 30px;
@@ -336,6 +343,10 @@ color: white;
 .shift{
   font-size: 2rem;
   margin-top: 90px;
+}
+
+.underline{
+  font-size: 1.2rem;
 }
 
 
